--- a/bicicleta/magic.html
+++ b/bicicleta/magic.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <title>Nimbus Stark| Bikcraft</title>
+  <title>Magic Might| Bikcraft</title>
 </head>
 
 <body id="bicicleta">
@@ -33,19 +33,19 @@
 
   <main class="titulo-bg">
     <div class="titulo container">
-      <p class="font-2-xl cor-05">R$ 4999</p>
-      <h1 class="font-1-xxl cor-01">Nimbus Stark
+      <p class="font-2-xl cor-05">R$ 2499</p>
+      <h1 class="font-1-xxl cor-01">Magic Might
         <span class="cor-p1">.</span>
       </h1>
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagem">
-        <img src="../img/bicicleta/nimbus-1.jpg" alt="" srcset="">
-        <img src="../img/bicicleta/nebula.jpg" alt="" srcset="">
         <img src="../img/bicicleta/magic.jpg" alt="" srcset="">
+        <img src="../img/bicicleta/nebula.jpg" alt="" srcset="">
+        <img src="../img/bicicleta/nimbus-1.jpg" alt="" srcset="">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font-2-l cor-01">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l cor-01">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a href="" class="button">Comprar Agora</a>
           <span class="font-1-xs cor-06"><img src="../img/icones/entrega.svg" alt="" srcset="">entrega em 5 dias</span>
@@ -61,7 +61,7 @@
           </li>
           <li>
             <img src="../img/icones/velocidade.svg" alt="" srcset="">
-            <h3 class="font-1-m-b cor-01">40 km/h</h3>
+            <h3 class="font-1-m-b cor-01">35 km/h</h3>
             <p class="font-2-xs cor-05">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
           </li>
           <li>
@@ -77,12 +77,12 @@
         </ul>
         <h2 class="font-1-xs cor-06">Ficha Técnica</h2>
         <ul class="bicicleta-ficha font-2-s cor-04">
-          <li>Peso <span>9 kg</span></li>
-          <li>Altura <span>60 cm</span></li>
-          <li>Largura <span>120 cm</span></li>
-          <li>Profundidade <span>10 cm</span></li>
-          <li>Marchas <span>16</span></li>
-          <li>Rodas <span>29g</span></li>
+          <li>Peso <span>9.6 kg</span></li>
+          <li>Altura <span>53 cm</span></li>
+          <li>Largura <span>110 cm</span></li>
+          <li>Profundidade <span>09 cm</span></li>
+          <li>Marchas <span>12</span></li>
+          <li>Rodas <span>22g</span></li>
         </ul>
       </div>
     </div>
@@ -92,17 +92,17 @@
 
     <ul class="bicicletas-lista">
       <li>
-        <a href="./magic.html">
-          <img src="../img/bicicletas/magic.jpg" alt="" srcset="">
-          <h3 class="font-1-xl cor-11">Magic Might</h3>
-          <span class="font-2-m cor-08">R$ 2499</span>
+        <a href="./nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt="" srcset="">
+          <h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
+          <span class="font-2-m cor-08">R$ 4999</span>
         </a>
       </li>
       <li>
         <a href="./nebula.html">
           <img src="../img/bicicletas/nebula.jpg" alt="" srcset="">
-          <h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
-          <span class="font-2-m cor-08">R$ 4999</span>
+          <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
+          <span class="font-2-m cor-08">R$ 3999</span>
         </a>
       </li>
 
