--- a/bicicleta/nebula.html
+++ b/bicicleta/nebula.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <title>Nimbus Stark| Bikcraft</title>
+  <title>Nebula Cosmic | Bikcraft</title>
 </head>
 
 <body id="bicicleta">
@@ -33,19 +33,19 @@
 
   <main class="titulo-bg">
     <div class="titulo container">
-      <p class="font-2-xl cor-05">R$ 4999</p>
-      <h1 class="font-1-xxl cor-01">Nimbus Stark
+      <p class="font-2-xl cor-05">R$ 3999</p>
+      <h1 class="font-1-xxl cor-01">Nebula Cosmic
         <span class="cor-p1">.</span>
       </h1>
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagem">
-        <img src="../img/bicicleta/nimbus-1.jpg" alt="" srcset="">
         <img src="../img/bicicleta/nebula.jpg" alt="" srcset="">
+        <img src="../img/bicicleta/nimbus-1.jpg" alt="" srcset="">
         <img src="../img/bicicleta/magic.jpg" alt="" srcset="">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font-2-l cor-01">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l cor-01">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a href="" class="button">Comprar Agora</a>
           <span class="font-1-xs cor-06"><img src="../img/icones/entrega.svg" alt="" srcset="">entrega em 5 dias</span>
@@ -77,12 +77,12 @@
         </ul>
         <h2 class="font-1-xs cor-06">Ficha Técnica</h2>
         <ul class="bicicleta-ficha font-2-s cor-04">
-          <li>Peso <span>9 kg</span></li>
-          <li>Altura <span>60 cm</span></li>
-          <li>Largura <span>120 cm</span></li>
-          <li>Profundidade <span>10 cm</span></li>
+          <li>Peso <span>9.2 kg</span></li>
+          <li>Altura <span>62cm cm</span></li>
+          <li>Largura <span>125 cm</span></li>
+          <li>Profundidade <span>08 cm</span></li>
           <li>Marchas <span>16</span></li>
-          <li>Rodas <span>29g</span></li>
+          <li>Rodas <span>28g</span></li>
         </ul>
       </div>
     </div>
@@ -99,8 +99,8 @@
         </a>
       </li>
       <li>
-        <a href="./nebula.html">
-          <img src="../img/bicicletas/nebula.jpg" alt="" srcset="">
+        <a href="./nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt="" srcset="">
           <h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
           <span class="font-2-m cor-08">R$ 4999</span>
         </a>
