--- a/bicicletas.html
+++ b/bicicletas.html
@@ -66,7 +66,7 @@
 						Rastreador
 					</li>
 				</ul>
-				<a class="button seta" href="./bicicleta.html">Mais Sobre</a>
+				<a class="button seta" href="./bicicleta/nimbus.html">Mais Sobre</a>
 			</div>
 		</div>
 
@@ -97,7 +97,7 @@
 							Rastreador
 						</li>
 					</ul>
-					<a class="button seta" href="./bicicleta.html">Mais Sobre</a>
+					<a class="button seta" href="./bicicleta/nebula.html">Mais Sobre</a>
 				</div>
 			</div>
 		</div>
@@ -129,7 +129,7 @@
 						Rastreador
 					</li>
 				</ul>
-				<a class="button seta" href="./bicicleta.html">Mais Sobre</a>
+				<a class="button seta" href="./bicicleta/magic.html">Mais Sobre</a>
 			</div>
 		</div>
 
