--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<ul class="header-menu font-1-m cor-01">
 					<li><a href="./bicicletas.html">Bicicletas</a></li>
 					<li><a href="./seguros.html">Seguros</a></li>
-					<li><a href="">Contatos</a></li>
+					<li><a href="./contato.html">Contatos</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -184,9 +184,9 @@
 				<h3 class="font-2-l-b cor-01">Informações</h3>
 				<nav>
 					<ul class="font-1-m cor-05">
-						<li><a href="">Bicicletas</a></li>
-						<li><a href="">Seguros</a></li>
-						<li><a href="">Contatos</a></li>
+						<li><a href="./bicicletas.html">Bicicletas</a></li>
+						<li><a href="./seguros.html">Seguros</a></li>
+						<li><a href="./contato.html">Contatos</a></li>
 						<li><a href="./termos.html">Termos e Condições</a></li>
 					</ul>
 				</nav>
