--- a/seguros.html
+++ b/seguros.html
@@ -25,7 +25,7 @@
         <ul class="header-menu font-1-m cor-01">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a id="seguros-link" href="">Seguros</a></li>
-          <li><a href="">Contatos</a></li>
+          <li><a href="./contato.html">Contatos</a></li>
         </ul>
       </nav>
     </div>
@@ -177,8 +177,8 @@
             <ul class="font-1-m cor-05">
               <li><a href="./bicicletas.html">Bicicletas</a></li>
               <li><a href="./seguros.html">Seguros</a></li>
-              <li><a href="">Contatos</a></li>
-              <li><a href="">Termos e Condições</a></li>
+              <li><a href="./contato.html">Contatos</a></li>
+              <li><a href="./termos.html">Termos e Condições</a></li>
             </ul>
           </nav>
         </div>
