--- a/bicicleta/nimbus.html
+++ b/bicicleta/nimbus.html
@@ -25,7 +25,7 @@
         <ul class="header-menu font-1-m cor-01">
           <li><a href="../bicicletas.html">Bicicletas</a></li>
           <li><a href="../seguros.html">Seguros</a></li>
-          <li><a href="">Contatos</a></li>
+          <li><a href="../contato.html">Contatos</a></li>
         </ul>
       </nav>
     </div>
@@ -47,7 +47,7 @@
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-01">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a href="" class="button">Comprar Agora</a>
+          <a href="../orcamento.html" class="button">Comprar Agora</a>
           <span class="font-1-xs cor-06"><img src="../img/icones/entrega.svg" alt="" srcset="">entrega em 5 dias</span>
           <span class="font-1-xs cor-06"><img src="../img/icones/estoque.svg" alt="" srcset="">18 em estoque</span>
         </div>
@@ -117,7 +117,7 @@
       <div class="seguro-conteudo">
         <h1 class="font-1-xxl cor-01">Pedale mais tranquilo com nosso <span class="cor-p1">seguro.</span></h1>
         <p class="font-2-l cor-05">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-        <a class="button" href="">conheça mais</a>
+        <a class="button" href="../seguros.html">conheça mais</a>
       </div>
     </div>
   </article>
