--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<li> Suporte 08h as 18h </li>
 					<li> Cobertura estadual</li>
 				</ul>
-				<a class="button secundario" href="">Inscreva-se</a>
+				<a class="button secundario" href="./seguros.html">Inscreva-se</a>
 			</div>
 			<div class="seguros-item">
 				<h3 class="font-1-xl cor-p1">OURO</h3>
