--- a/seguros.html
+++ b/seguros.html
@@ -52,7 +52,7 @@
             <li> Suporte 08h as 18h </li>
             <li> Cobertura estadual</li>
           </ul>
-          <a class="button secundario" href="">Inscreva-se</a>
+          <a class="button secundario" href="./orcamento.html">Inscreva-se</a>
         </div>
         <div class="seguros-item">
           <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -65,7 +65,7 @@
             <li> Desconto em parceiros</li>
             <li> Acesso ao Clube Bikcraft</li>
           </ul>
-          <a class="button" href="">Inscreva-se</a>
+          <a class="button" href="./orcamento.html">Inscreva-se</a>
         </div>
       </div>
     </article>
