--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
    Explore o mundo na sua velocidade com a Bikcraft.">
+	<link rel="preload" href="./css/style.css" as="style">
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +15,7 @@
 	<title>Document</title>
 </head>
 
-<body>
+<body id="home" ;>
 	<header class="header-bg">
 		<div class="header container">
 			<a href="./">
@@ -38,9 +39,10 @@
 				<p class="font-2-l cor-05">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
 				<a class="button" href="./bicicletas.html">Escolha a sua </a>
 			</div>
-			<div>
+			<picture>
+				<source media="(max-width:800px)" srcset="./img/bicicletas/nimbus.jpg">
 				<img src="./img/fotos/introducao.jpg" alt="introducao">
-			</div>
+			</picture>
 		</div>
 	</main>
 
