--- a/bicicletas.html
+++ b/bicicletas.html
@@ -24,8 +24,8 @@
 
 			<nav aria-label="primaria">
 				<ul class="header-menu font-1-m cor-01">
-					<li><a id="bicicletas-link" href="./bicicletas.html">Bicicletas</a></li>
-					<li><a id="seguros" href="./seguros.html">Seguros</a></li>
+					<li><a href="./bicicletas.html">Bicicletas</a></li>
+					<li><a href="./seguros.html">Seguros</a></li>
 					<li><a href="./contato.html">Contatos</a></li>
 				</ul>
 			</nav>
@@ -175,4 +175,8 @@
 			<p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
 		</div>
 	</footer>
+
+	<script src="./js/script.js"></script>
 </body>
+
+</html>
