--- a/contato.html
+++ b/contato.html
@@ -26,7 +26,7 @@
         <ul class="header-menu font-1-m cor-01">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
-          <li><a id="contato-link" href="./contato.html">Contatos</a></li>
+          <li><a href="./contato.html">Contatos</a></li>
         </ul>
       </nav>
     </div>
@@ -166,4 +166,8 @@
       <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
     </div>
   </footer>
+
+  <script src="./js/script.js"></script>
 </body>
+
+</html>
