--- a/seguros.html
+++ b/seguros.html
@@ -25,7 +25,7 @@
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-01">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
-          <li><a id="seguros-link" href="">Seguros</a></li>
+          <li><a href="">Seguros</a></li>
           <li><a href="./contato.html">Contatos</a></li>
         </ul>
       </nav>
@@ -187,4 +187,8 @@
         <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
       </div>
     </footer>
+
+    <script src="./js/script.js"></script>
 </body>
+
+</html>
