--- a/bicicleta/nimbus.html
+++ b/bicicleta/nimbus.html
@@ -162,4 +162,7 @@
       <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="../js/script.js"></script>
 </body>
+
+</html>
