--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
    Explore o mundo na sua velocidade com a Bikcraft.">
 	<link rel="preload" href="./css/style.css" as="style">
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -81,7 +81,7 @@
 				<h2 class="font-1-xxl cor-01">voce escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
 				<p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade.
 					As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-				<a class="link" href="./bicicletas.html">Escolha Um modelo</a>
+				<a class="link" href="./bicicletas.html">Escolha um modelo</a>
 				<div class="vantagens-home">
 					<div>
 						<img src="./img/icones/eletrica.svg" alt="" srcset="">
@@ -197,6 +197,10 @@
 			<p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
 		</div>
 	</footer>
+
+
+
+	<script src="./js/script.js"></script>
 </body>
 
 </html>
