--- a/orcamento.html
+++ b/orcamento.html
@@ -202,4 +202,7 @@
       <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
+
+</html>
