parametros e perguntas frequentes

--- a/bicicleta/nebula.html
+++ b/bicicleta/nebula.html
@@ -48,7 +48,7 @@
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-01">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a href="../orcamento.html" class="button">Comprar Agora</a>
+          <a href="../orcamento.html?tipo=bikcraft&value=nebula" class="button">Comprar Agora</a>
           <span class="font-1-xs cor-06"><img src="../img/icones/entrega.svg" alt="" srcset="">entrega em 5 dias</span>
           <span class="font-1-xs cor-06"><img src="../img/icones/estoque.svg" alt="" srcset="">18 em estoque</span>
         </div>
