--- a/seguros.html
+++ b/seguros.html
@@ -53,7 +53,7 @@
             <li> Suporte 08h as 18h </li>
             <li> Cobertura estadual</li>
           </ul>
-          <a class="button secundario" href="./orcamento.html">Inscreva-se</a>
+          <a class="button secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
         </div>
         <div class="seguros-item">
           <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -66,7 +66,7 @@
             <li> Desconto em parceiros</li>
             <li> Acesso ao Clube Bikcraft</li>
           </ul>
-          <a class="button" href="./orcamento.html">Inscreva-se</a>
+          <a class="button" href="./orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
         </div>
       </div>
     </article>
@@ -116,32 +116,32 @@
         </h1>
         <dl>
           <div>
-            <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-            <dd class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
+            <dt> <button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true"> Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd id="pergunta1" class="font-2-s cor-09 ativo">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
           </div>
           <div>
-            <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-            <dd class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
+            <dt> <button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false"> Posso entrar em contato?</button></dt>
+            <dd id="pergunta2" class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
           </div>
           <div>
-            <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-            <dd class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
+            <dt> <button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false"> Vocês possuem algum desconto?</button></dt>
+            <dd id="pergunta3" class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
           </div>
           <div>
-            <dt class="font-1-m-b">Qual a garantia que possuem?</dt>
-            <dd class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
+            <dt> <button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuem? </button></dt>
+            <dd id="pergunta4" class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
           </div>
           <div>
-            <dt class="font-1-m-b">Posso parcelar boloto?</dt>
-            <dd class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
+            <dt> <button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false"> Posso parcelar boloto?</button></dt>
+            <dd id="pergunta5" class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
           </div>
           <div>
-            <dt class="font-1-m-b">Quantas trocas posso fazer por ano?</dt>
-            <dd class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
+            <dt> <button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer por ano?</button></dt>
+            <dd id="pergunta6" class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
           </div>
           <div>
-            <dt class="font-1-m-b">Qual Bikcraft escolher para o meu tamanho?</dt>
-            <dd class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
+            <dt> <button class="font-1-m-b" aria-controls="pergunta7" aria-expanded="false">Qual Bikcraft escolher para o meu tamanho?</button></dt>
+            <dd id="pergunta7" class="font-2-s cor-09">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.</dd>
           </div>
         </dl>
       </div>
