--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					<li> Desconto em parceiros</li>
 					<li> Acesso ao Clube Bikcraft</li>
 				</ul>
-				<a class="button" href="">Inscreva-se</a>
+				<a class="button" href="./seguros.html">Inscreva-se</a>
 			</div>
 		</div>
 	</article>
